Implemented get, post calls

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "express": "^4.21.2",
     "helmet": "^8.0.0",
-    "nanoid": "^5.1.2"
+    "joi": "^17.13.3",
+    "nanoid": "^5.1.2",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
